Fix about page spacing, make contact info display inline-block

--- a/styles/main.css
+++ b/styles/main.css
@@ -195,7 +195,7 @@ ul li, ol li {
   padding:0 0.3em 0 0.3em;
 }
 
-.about-link {
+.contact, .about-link {
   display: inline-block;
 }
 
